[*] Comics controller (tsoa), [*] Jobs controller (tsoa)
